--- a/semana05/lab-tube/lab-tube/src/App.css
+++ b/semana05/lab-tube/lab-tube/src/App.css
@@ -5,8 +5,9 @@ body {
 }
 
 .botao-menu {
+
   padding: 5px;
-  border: 1px solid black;
+  border: 2px solid black;
   margin: 5px;
 }
 
@@ -31,7 +32,7 @@ main {
 }
 
 .menu-vertical {
-  flex-basis: 200px;
+  display: flex;
   border-right-style: solid;
   border-right-width: thin;
 }
@@ -40,13 +41,26 @@ main {
   list-style-type: none;
 }
 
+
+.card {
+  display: flex;
+  flex-direction: column;
+}
+
+.campotexto {
+  display: flex;
+  align-self: flex-start;
+}
+
 .painel-de-videos {
-  padding: 10px;
+  padding: 0px;
   display: grid;
   grid-template-columns: repeat(4, 4fr);
   grid-template-rows: repeat(4, 2fr);
-  grid-column-gap: 10px;
-  grid-row-gap: 10px;
+  grid-column-gap: 70px;
+  grid-row-gap: 0px;
+  margin-left: 40px;
+  margin-top: 5px;
 }
 
 .box-pagina-principal {
@@ -67,13 +81,10 @@ footer {
   width: 100%;
   display: flex;
   padding: 0 10px;
+  align-items: flex-start;
 }
 
 .box-pagina-principal > img {
   width: 100%;
   height: 200px;
-}
-
-h4 {
-  margin-left: 20px;
 }
