--- a/semana05/lab-tube/lab-tube/src/App.css
+++ b/semana05/lab-tube/lab-tube/src/App.css
@@ -4,13 +4,6 @@ body {
   margin: 0;
 }
 
-.botao-menu {
-
-  padding: 5px;
-  border: 2px solid black;
-  margin: 5px;
-}
-
 .tela-inteira {
   height: 100vh;
   display: flex;
@@ -82,6 +75,7 @@ footer {
   display: flex;
   padding: 0 10px;
   align-items: flex-start;
+  padding: 0 10px;
 }
 
 .box-pagina-principal > img {
